<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="489dp"
        android:contentDescription="@string/login_icon_image_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:src="@drawable/school_logo"
        tools:srcCompat="@drawable/school_logo" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        app:cardCornerRadius="@dimen/login_card_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.026">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/twenty_dp_margin"
                android:gravity="center"
                android:text= "@string/signin_text"
                android:fontFamily="@font/roboto"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/twenty_dp_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_screen_user_name_iput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_screen_user_name_input_hint"
                    android:inputType="text"
                    android:drawableStart="@drawable/user_name_icon_login"
                    android:drawablePadding="@dimen/fiftenn_dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/twenty_dp_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_screen_password_iput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_screen_password_hint"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/password_login_icon"
                    android:drawablePadding="@dimen/fiftenn_dp"
                    android:paddingStart="@dimen/fiftenn_dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_screen_forgot_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/twenty_dp_margin"
                android:visibility="gone"
                android:text="@string/forgot_password_text_login" />

            <Button
                android:id="@+id/login_btn"
                style="@style/login_btn_style"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_text" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_right_text"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        style="@style/forgot_password_login_label_style" />

</android.support.constraint.ConstraintLayout>