<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.adminfragments.AddTeacherFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add New Teacher"
                android:textColor="#FF5300"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="@dimen/ten_dp"
                android:fontFamily="@font/roboto"/>

    <params.com.stepview.StatusViewScroller
        android:id="@+id/add_teacher_step_count_status_view_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:stepCount="2"
        app:currentCount="1"
        app:drawLabels="true"
        android:layout_margin="@dimen/ten_dp"
        app:circleColorType="fillStroke"
        app:lineGap="5dp"
        android:layout_gravity="right"
        app:lineWidth="3dp"
        app:lineColorIncomplete="#FF5300"
        app:lineColorCurrent="#FF5300"
        app:circleColor="#FF5300"
        app:circleColorCurrent="#FF5300"
        app:circleColorIncomplete="@color/white"
        app:textColorLabels="#FF5300"
        app:textColorLabelsCurrent="@android:color/white"
        app:circleStrokeWidth="4dp"
        app:circleStrokeColorCurrent="#FF5300"
        app:textSizeLabels="15sp" />
        </LinearLayout>
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="@dimen/five_dp">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/five_dp"
               android:orientation="vertical">
               <LinearLayout
                   android:id="@+id/first_step_layout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:visibility="visible"
                   android:orientation="vertical">
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_full_name"
                       style="@style/add_teacher_input_style"
                       android:inputType="textPersonName|textCapWords"
                       android:drawableStart="@drawable/name_icon"
                       android:hint="@string/add_teacher_full_name_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_designaton"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/designation_icon"
                       android:inputType="text"
                       android:hint="@string/add_teacher_input_designation_hint" />

               </android.support.design.widget.TextInputLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:orientation="horizontal"
                   android:background="#1B606060"
                   android:layout_margin="@dimen/five_dp"
                   android:weightSum="1">
                   <ImageView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight=".15"
                       android:layout_margin="@dimen/five_dp"
                       android:src="@drawable/teaching_category_1"/>

                   <Spinner
                       android:id="@+id/add_teacher_first_layout_spinner_teacher_category1"
                       android:layout_width="0dp"
                       android:layout_height="50dp"
                       android:layout_margin="@dimen/five_dp"
                       android:entries="@array/teacher_categories"
                       android:layout_weight=".85"
                       android:background="@drawable/add_teacher_spinner_shape" />
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:orientation="horizontal"
                   android:background="#1B606060"
                   android:layout_margin="@dimen/five_dp"
                   android:weightSum="1">
                   <ImageView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight=".15"
                       android:layout_margin="@dimen/five_dp"
                       android:src="@drawable/teaching_category_1"/>
                   <Spinner
                       android:id="@+id/add_teacher_first_layout_spinner_teacher_category2"
                       android:layout_width="0dp"
                       android:layout_height="50dp"
                       android:layout_margin="@dimen/five_dp"
                       android:layout_weight=".85"
                       android:entries="@array/teacher_category_2"
                       android:background="@drawable/add_teacher_spinner_shape"/>
               </LinearLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_academic_qly"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/qualification_icon"
                       android:inputType="text"
                       android:hint="@string/add_teacher_academic_qualification_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_professional_qly"
                       style="@style/add_teacher_input_style"
                       android:inputType="text"
                       android:drawableStart="@drawable/professional_qualification_icon"
                       android:hint="@string/add_teacher_professional_qualification_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_mobile"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/mobile_icon"
                       android:inputType="phone"
                       android:maxLength="10"
                       android:hint="@string/add_teacher_academic_mobile_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_alternative_mobile"
                       style="@style/add_teacher_input_style"
                       android:inputType="phone"
                       android:maxLength="10"
                       android:drawableStart="@drawable/alternative_mobile"
                       android:hint="@string/add_teacher_academic_aleternate_no_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_landline"
                       style="@style/add_teacher_input_style"
                       android:inputType="phone"
                       android:drawableStart="@drawable/land_line_icon"
                       android:hint="@string/add_teacher_landline_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_first_layout_label_email"
                       style="@style/add_teacher_input_style"
                       android:inputType="textEmailAddress"
                       android:drawableStart="@drawable/email_icon"
                       android:hint="@string/add_teacher_email_hint" />

               </android.support.design.widget.TextInputLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:orientation="horizontal"
                   android:background="#1B606060"
                   android:layout_margin="@dimen/five_dp"
                   android:weightSum="1">
                   <ImageView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight=".15"
                       android:layout_margin="@dimen/five_dp"
                       android:src="@drawable/gender_icon"/>
                   <Spinner
                       android:id="@+id/dd_teacher_first_layout_spinner_teacher_gender"
                       android:layout_width="0dp"
                       android:layout_height="50dp"
                       android:layout_margin="@dimen/five_dp"
                       android:layout_weight=".85"
                       android:entries="@array/gender_category"
                       android:background="@drawable/add_teacher_spinner_shape"/>
               </LinearLayout>
                   <Button
                       android:id="@+id/first_layout_next_btn"
                       style="@style/add_teacher_screen_btn_style"
                       android:layout_gravity="right"
                       android:text="Next" />
               </LinearLayout>
           <LinearLayout
               android:id="@+id/second_step_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:visibility="gone"
               android:orientation="vertical">
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_dob"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/dob_icon"
                       android:inputType="date"
                       android:hint="@string/add_teacher_dob_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style"
                   android:layout_height="100dp">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_present_address"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/address_icon"
                       android:inputType="textPostalAddress"
                       android:hint="@string/add_teacher_present_address_hint"
                       android:maxLines="3"
                       android:layout_height="match_parent"/>

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style"
                   android:layout_height="100dp">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_permenant_address"
                       style="@style/add_teacher_input_style"
                       android:inputType="textPostalAddress"
                       android:layout_height="match_parent"
                       android:drawableStart="@drawable/permenant_address_icon"
                       android:maxLines="3"
                       android:hint="@string/add_teacher_permenant_address_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_doj"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/doj_icon"
                       android:inputType="date"
                       android:hint="@string/add_teacher_doj_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_basic_salary"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/basic_salary_icon"
                       android:inputType="numberDecimal"
                       android:hint="@string/add_teacher_basic_salary_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_bank_name"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/back_account_icon"
                       android:inputType="text|textCapWords"
                       android:hint="@string/add_teacher_bank_name_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_account_no"
                       style="@style/add_teacher_input_style"
                       android:inputType="text"
                       android:drawableStart="@drawable/bank_number_icon"
                       android:hint="@string/add_teacher_banck_account_no_hint" />

               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   style="@style/add_teacher_text_input_layout_style">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/add_teacher_second_layout_label_aadhar"
                       style="@style/add_teacher_input_style"
                       android:drawableStart="@drawable/aadhar_icon"
                       android:inputType="number"
                       android:maxLength="12"
                       android:hint="@string/add_teacher_aadhar_hint" />

               </android.support.design.widget.TextInputLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:orientation="horizontal"
                   android:background="#1B606060"
                   android:layout_margin="@dimen/five_dp"
                   android:weightSum="1">
                   <ImageView
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight=".15"
                       android:layout_margin="@dimen/five_dp"
                       android:src="@drawable/blood_group_icon"/>

                   <Spinner
                       android:id="@+id/add_teacher_second_layout_spinner_blood_group"
                       android:layout_width="0dp"
                       android:layout_height="50dp"
                       android:layout_margin="@dimen/five_dp"
                       android:entries="@array/student_blood_group"
                       android:layout_weight=".85"
                       android:background="@drawable/add_teacher_spinner_shape" />
               </LinearLayout>
               <Button
                   android:id="@+id/second_layout_submit_btn"
                   style="@style/add_teacher_screen_btn_style"
                   android:layout_gravity="center_horizontal"
                   android:text="Submit" />
           </LinearLayout>

           </LinearLayout>
       </ScrollView>
    </LinearLayout>
</FrameLayout>